// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination /> проверяет работы вызова callback при смене страницы 1`] = `
<WrapperComp
  activePage={1}
  count={151}
  maxButtons={4}
  onSelect={[MockFunction]}
  size={10}
  stepIncrement={10}
>
  <withI18nextTranslation(Pagination)
    activePage={1}
    count={151}
    maxButtons={4}
    onSelect={[MockFunction]}
    size={10}
    stepIncrement={10}
  >
    <Pagination
      activePage={1}
      count={151}
      first={false}
      hideSinglePage={true}
      i18n={Object {}}
      last={false}
      maxButtons={4}
      next={false}
      nextText={null}
      onSelect={[MockFunction]}
      prev={false}
      prevText={null}
      showCountRecords={true}
      size={10}
      stepIncrement={10}
      t={[Function]}
      tReady={false}
      withoutBody={false}
    >
      <nav
        className="n2o-pagination"
        style={
          Object {
            "alignItems": "baseline",
            "display": "flex",
          }
        }
      >
        <ul
          className="pagination d-inline-flex"
        >
          <PaginationButton
            active={true}
            eventKey={1}
            key="1"
            label={1}
            onSelect={[MockFunction]}
            tabIndex={0}
          >
            <li
              className="page-item active"
              onClick={[Function]}
            >
              <a
                className="page-link"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": 1,
                  }
                }
                href="#"
                tabIndex={0}
              />
            </li>
          </PaginationButton>
          <PaginationButton
            active={false}
            eventKey={2}
            key="2"
            label={2}
            onSelect={[MockFunction]}
            tabIndex={0}
          >
            <li
              className="page-item"
              onClick={[Function]}
            >
              <a
                className="page-link"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": 2,
                  }
                }
                href="#"
                tabIndex={0}
              />
            </li>
          </PaginationButton>
          <PaginationButton
            active={false}
            eventKey={3}
            key="3"
            label={3}
            onSelect={[MockFunction]}
            tabIndex={0}
          >
            <li
              className="page-item"
              onClick={[Function]}
            >
              <a
                className="page-link"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": 3,
                  }
                }
                href="#"
                tabIndex={0}
              />
            </li>
          </PaginationButton>
          <PaginationButton
            active={false}
            eventKey={4}
            key="4"
            label={4}
            onSelect={[MockFunction]}
            tabIndex={0}
          >
            <li
              className="page-item"
              onClick={[Function]}
            >
              <a
                className="page-link"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": 4,
                  }
                }
                href="#"
                tabIndex={0}
              />
            </li>
          </PaginationButton>
          <PaginationButton
            active={false}
            eventKey={5}
            key="5"
            label={5}
            onSelect={[MockFunction]}
            tabIndex={0}
          >
            <li
              className="page-item"
              onClick={[Function]}
            >
              <a
                className="page-link"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": 5,
                  }
                }
                href="#"
                tabIndex={0}
              />
            </li>
          </PaginationButton>
          <PaginationButton
            disabled={true}
            key="ellipsisMiddle"
            label="..."
            noBorder={true}
            tabIndex={-1}
          >
            <li
              className="page-item disabled"
              onClick={[Function]}
            >
              <a
                className="page-link no-border"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "...",
                  }
                }
                href="#"
                tabIndex={-1}
              />
            </li>
          </PaginationButton>
          <PaginationButton
            eventKey={11}
            key="11"
            label={11}
            onSelect={[MockFunction]}
            tabIndex={0}
          >
            <li
              className="page-item"
              onClick={[Function]}
            >
              <a
                className="page-link"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": 11,
                  }
                }
                href="#"
                tabIndex={0}
              />
            </li>
          </PaginationButton>
          <PaginationButton
            disabled={true}
            key="ellipsisLast"
            label="..."
            noBorder={true}
            tabIndex={-1}
          >
            <li
              className="page-item disabled"
              onClick={[Function]}
            >
              <a
                className="page-link no-border"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "...",
                  }
                }
                href="#"
                tabIndex={-1}
              />
            </li>
          </PaginationButton>
        </ul>
        <span
          className="n2o-pagination-info"
          style={
            Object {
              "display": "inline-flex",
              "paddingLeft": "1rem",
            }
          }
        >
          paginationTotal 151
           
          paginationCount
        </span>
      </nav>
    </Pagination>
  </withI18nextTranslation(Pagination)>
</WrapperComp>
`;

exports[`<Pagination /> проверяет рендер с дефолтными настройками 1`] = `<withI18nextTranslation(Pagination) />`;

exports[`<Pagination /> проверяет рендер с классическими настрйоками n2o 1`] = `
<withI18nextTranslation(Pagination)
  activePage={1}
  count={151}
  maxButtons={4}
  size={10}
  stepIncrement={10}
/>
`;

exports[`<Pagination /> проверяет рендер с полным функционалом 1`] = `
<withI18nextTranslation(Pagination)
  activePage={1}
  count={151}
  first={true}
  last={true}
  maxButtons={4}
  next={true}
  prev={true}
  size={10}
  stepIncrement={10}
/>
`;
